--- a/src/style.css
+++ b/src/style.css
@@ -33,10 +33,12 @@
 .container .hero p {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .container .hero p span {
-    color: red;
+    border-radius: 50%;
+    color: #FF6E31;
 }
 
 .hero .minMaxContainer {
@@ -57,8 +59,6 @@
     font-weight: bold;
 }
 
-
-
 .randomButton button {
     width: 100%;
     border: none;
@@ -66,12 +66,10 @@
     font-size: medium;
     font-weight: bold;
     cursor: pointer;
-    border: 1px solid white;
-    transition: .4s;
+    background-color: #fc6321;
+    color: white
 }
 
 .randomButton button:hover {
-    background-color: #1a6985;
-    border: 1px solid white;
-    color: white;
+    background-color: #fa7841;
 }
